    permitting resolution in favour of any of the conflicting symbols.
    (reported by Bruno Haible for CMUCL)
  * bug fix: EQUAL compiler optimizations is less aggressive on
    strings which can potentially compare true despite having distinct
    specialized array element types.
  * FORMAT compile-time argument count checking has been enhanced.
    (report from Bruno Haible for CMUCL)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** RENAME-PACKAGE allows all package designators as new package
       names.
    ** constraint propagation and lambda variable substitution are
       more cautious in dealing with partially deleted code.
    ** compiler sometimes lost reoptimization passes.
    ** CERROR, given a condition as condition designator, passes its
       remaining arguments to the continue format control without
       complaint.
    ** Case-altering FORMAT directives work correctly on non-ASCII
       characters.
    ** The REAL type specifier handles bounds outside the floating
       point ranges without signalling FLOATING-POINT-OVERFLOW.
    ** Functions with IR1-transformations can create intercomponent
       references to global functions.
    ** NIL parameter to the FORMAT directive ~^ means `unsupplied
       parameter'.
    ** FORMAT ~R treats a nil value for its first parameter correctly.

changes in sbcl-0.8.16 relative to sbcl-0.8.15:
  * enhancement: saving cores with foreign code loaded is now
    supported on x86/NetBSD and sparc/Linux in addition to the previously
    supported platforms.
  * bug fix: on some platforms repeated installations caused multiple
    copies of HTML documentation to be installed -- should not happen
    any more. (reported by Stefan Scholl)
  * bug fix: parsing self-recursive alien record types multiple times
    no longer causes infinite recursion. (reported by Thomas F. Burdick,
    original patch by Helmut Eller for CMUCL)
  * bug fix: stack-exhaustion detection works now on NetBSD as well.